# cpfasst

./: .gitignore  .gitmodules  CMakeLists.txt  LibPFASST.cmake  Makefile  README.md  cmain.c  common.mk  cpf_imex_sweeper.f90  fmain.f90  interface.f90  level.f90  multi_level.nml  pipeline.nml  probin.f90  probin.nml  sdc.nml  sweeper.f90  versions
.githooks/: pre-commit
.github/workflows/: main.yml
docker/: Dockerfile
docker/alpine-mpich/: Dockerfile
examples/EX2_Dahlquist/: Makefile
examples/EX2_Dahlquist/src/: encap.c  hooks.h  level.c  local.h  main.c  probin.c  probin.h  shared.c  shared.h  sweeper.c  types.h
examples/EX3_adv_diff/: CMakeLists.txt  Makefile  test.nml
examples/EX3_adv_diff/src/: encap.c  encap.h  fft_tool.c  fft_tool.h  fftpack.c  level.c  local.h  main.c  probin.c  shared.c  shared.h  solution.c  solution.h  sweeper.c  types.h  utils.c  utils.h
include/: cpf_encap.h  cpf_hooks.h  cpf_imex_sweeper.h  cpf_interface.h  cpf_level.h  cpf_misc.h  cpf_parameters.h  cpf_static.h  cpf_sweeper.h  cpf_user_level.h  cpf_utils.h
src/: cmain.c  cpf_encap.f90  cpf_encap.h  cpf_hooks.f90  cpf_hooks.h  cpf_imex_sweeper.f90  cpf_interface.f90  cpf_interface.h  cpf_level.f90  cpf_main.f90  cpf_parameters.f90  cpf_run.f90  cpf_user_level.f90  cpf_utils.c  cpf_utils.f90  data.h  encap.c  ex2sweeper.f90  hooks.c  hooks.f90  level.c  level.f90  probin.f90  sweeper.c  sweeper.h
tests/: compare.py  ex2_compare.sh  ex2_test.sh  run_example.sh  test_example.py  test_example.sh
